Minor improvements, improving general code quality